Added devenv shell for ruby 3.3

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ tmp
 test.rb
 spec/books/*.gnucash.*.*
 spec/books/*.LCK
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
